Fixed z-index logo 404 page

--- a/sites/all/themes/rhythm_front/css/__custom.css
+++ b/sites/all/themes/rhythm_front/css/__custom.css
@@ -3246,6 +3246,8 @@ ul.links li.de {
 .logo-img img {
   max-width: 100%;
   max-height: 90px;
+  position: relative;
+  z-index: 9;
 }
 
 @media screen and (min-width: 768px) {
